[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.4.4"
authors = ["LakeSail <hello@lakesail.com>"]
edition = "2021"
homepage = "https://lakesail.com"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lakehq/sail"
rust-version = "1.88.0"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "deny"
todo = "deny"

[workspace.dependencies]
thiserror = { version = "2.0.17" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["time", "io-util"] }
pbjson = "0.8.0"
pbjson-types = "0.8.0"
pbjson-build = "0.8.0"
tower = { version = "0.5.2", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
async-trait = "0.1.89"
async-recursion = "1.1.1"
async-stream = "0.3.6"
lazy_static = "1.5.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# TODO: `serde_yaml` is deprecated. No satisfactory alternative exists yet, we may need to build our own in the future.
serde_yaml = "0.9.34"
serde_with = { version = "3.16.1", default-features = false, features = ["base64", "std", "macros"] }
monostate = "1.0.2"
regex = "1.12.2"
glob = "0.3.3"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
futures = "0.3.31"
comfy-table = "=7.1.4"
html-escape = "0.2.13"
syn = "2.0.111"
quote = "1.0.42"
paste = "1.0.15"
proc-macro2 = "1.0.101"
prettyplease = "0.2.37"
phf = { version = "0.13.1", features = ["macros"] }
ryu = "1.0.20"
either = "1.15.0"
num-bigint = "0.4.6"
mimalloc = { version = "0.1.48", default-features = false }
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
url = "2.5.7"
lexical-core = { version = "1.0.6", default-features = false, features = ["write-integers", "write-floats", "parse-integers", "parse-floats"] }
aws-config = "1.8.12"
aws-credential-types = "1.2.9"
aws-smithy-runtime-api = "1.9.1"
aws-smithy-types = "1.3.3"
aws-smithy-async = "1.2.6"
clap = { version = "4.5.53", features = ["derive"] }
num_enum = "0.7.4"
num-traits = "0.2.19"
log = "0.4.29"
env_logger = "0.11.8"
fastrace = { version = "0.7.15", features = ["enable"] }
fastrace-opentelemetry = "0.14.0"
fastrace-futures = "0.7.15"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["testing"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tls", "tls-roots", "grpc-tonic"] }
opentelemetry-appender-log = "0.31.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
kube = "2.0.1"
k8s-openapi = { version = "0.26.1", features = ["latest"] }
twox-hash = "2.1.2"
murmur3 = "0.5.2"
aes = "0.8.4"
aes-gcm = "0.10.3"
cbc = { version = "0.1.2", features = ["std"] }
base64 = "0.22.1"
md-5 = "0.10.6"
crc32fast = "1.5.0"
sha1 = "0.10.6"
half = { version = "2.7.1", features = ["serde", "num-traits", "zerocopy"] }
iana-time-zone = "0.1.64"
chumsky = { version = "0.11.2", default-features = false, features = ["pratt"] }
num = "0.4.3"
hf-hub = { version = "0.4.3", default-features = false, features = ["tokio"] }
reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
percent-encoding = "2.3.2"
rustls = "0.23.35"
dashmap = "6.1.0"
itertools = "0.14.0"
moka = { version = "0.12.11", features = ["sync"] }
bytes = "1.11.0"
indexmap = "2.12.1"
pin-project-lite = "0.2.16"
ordered-float = { version = "5.1.0", features = ["serde"] }
apache-avro = { version = "0.21.0" }
rust_decimal = "1.39.0"
wiremock = "0.6.5"
testcontainers = "0.26.0"
progenitor = "0.11.2"
progenitor-client = "0.11.2"
secrecy = { version = "0.10.3", features = ["serde"] }
tempfile = "3.23.0"

######
# The versions of the following dependencies are managed manually.
######

# The `tonic` version must match the one used in `arrow-flight` (replace `RELEASE` with the release we are using):
#   https://github.com/apache/arrow-rs/blob/RELEASE/arrow-flight/Cargo.toml
tonic = { version = "0.14.1", features = ["tls-ring", "tls-native-roots", "gzip", "zstd"] }
tonic-build = "0.14.1"
tonic-prost-build = "0.14.1"
tonic-prost = "0.14.1"
tonic-reflection = "0.14.1"
tonic-health = "0.14.1"
tonic-types = "0.14.1"
# The `prost` version must match the one used in `tonic` (replace `RELEASE` with the release we are using):
#   https://github.com/hyperium/tonic/blob/vRELEASE/tonic/Cargo.toml
prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
# The `axum` version must match the one used in `tonic` (replace `RELEASE` with the release we are using):
#   https://github.com/hyperium/tonic/blob/vRELEASE/tonic/Cargo.toml
axum = "0.8.7"
datafusion = { version = "51.0.0", features = ["serde", "avro", "sql"] }
datafusion-common = { version = "51.0.0", features = ["object_store", "avro"] }
datafusion-datasource = { version = "51.0.0" }
datafusion-expr = { version = "51.0.0" }
datafusion-expr-common = { version = "51.0.0" }
datafusion-proto = { version = "51.0.0" }
datafusion-functions = { version = "51.0.0" }
datafusion-functions-nested = { version = "51.0.0" }
datafusion-physical-expr = { version = "51.0.0" }
datafusion-spark = { version = "51.0.0" }
datafusion-functions-json = { git = "https://github.com/lakehq/datafusion-functions-json.git", rev = "f768013" }
# The `pyo3` version must match the one used in `arrow-pyarrow` (replace `RELEASE` with the release we are using):
#   https://github.com/apache/arrow-rs/blob/RELEASE/arrow-pyarrow/Cargo.toml
pyo3 = { version = "0.26.0", features = ["serde"] }
arrow = { version = "57.1.0", features = ["chrono-tz"] }
arrow-buffer = { version = "57.1.0" }
arrow-schema = { version = "57.1.0", features = ["serde"] }
arrow-flight = { version = "57.1.0" }
arrow-pyarrow = { version = "57.1.0" }
parquet = { version = "57.1.0" }
serde_arrow = { version = "0.13.7", features = ["arrow-57"] }
# The `object_store` version must match the one used in DataFusion.
object_store = { version = "0.12.4", features = ["aws", "gcp", "azure", "http"] }
hdfs-native-object-store = "0.15.0"

# Lakehouse
delta_kernel = { version = "0.18.2", features = ["arrow-57", "default-engine-rustls", "internal-api"] }
######
# This is the end of the manually managed dependencies.
# Do not add more dependencies below.
######

[patch.crates-io]
# Override dependencies to use our forked versions.
# You can use `path = "..."` to temporarily point to your local copy of the crates to speed up local development.

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#release
opt-level = 3
debug = false
strip = true # Eliminate debug info to minimize binary size
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1

[profile.coverage]
inherits = "dev"
incremental = false
