[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.5.3"
authors = ["LakeSail <hello@lakesail.com>"]
edition = "2021"
homepage = "https://lakesail.com"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lakehq/sail"
rust-version = "1.91.0"

[workspace.lints.clippy]
allow_attributes = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "deny"
todo = "deny"

[workspace.dependencies]
thiserror = { version = "2.0.18" }
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["time", "io-util"] }
pbjson = "0.9.0"
pbjson-types = "0.9.0"
pbjson-build = "0.9.0"
educe = "0.6"
tower = { version = "0.5.3", features = ["full"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
async-trait = "0.1.89"
async-recursion = "1.1.1"
async-stream = "0.3.6"
lazy_static = "1.5.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# TODO: `serde_yaml` is deprecated. No satisfactory alternative exists yet, we may need to build our own in the future.
serde_yaml = "0.9.34"
serde_with = { version = "3.18.0", default-features = false, features = ["base64", "std", "macros"] }
monostate = "1.0.2"
regex = "1.12.3"
glob = "0.3.3"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
futures = "0.3.32"
comfy-table = "=7.2.2"
html-escape = "0.2.13"
syn = "2.0.117"
quote = "1.0.45"
paste = "1.0.15"
proc-macro2 = "1.0.105"
prettyplease = "0.2.37"
phf = { version = "0.13.1", features = ["macros"] }
ryu = "1.0.23"
either = "1.15.0"
num-bigint = "0.4.6"
mimalloc = { version = "0.1.48", default-features = false }
rand = "0.10.0"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
url = "2.5.8"
lexical-core = { version = "1.0.6", default-features = false, features = ["write-integers", "write-floats", "parse-integers", "parse-floats"] }
aws-config = "1.8.15"
aws-credential-types = "1.2.13"
aws-sdk-glue = { version = "1.142.0", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-smithy-runtime-api = "1.11.3"
aws-smithy-types = "1.3.3"
aws-smithy-async = "1.2.6"
clap = { version = "4.5.60", features = ["derive"] }
num_enum = "0.7.6"
num-traits = "0.2.19"
log = "0.4.29"
env_logger = "0.11.9"
fastrace = { version = "0.7.17", features = ["enable"] }
fastrace-opentelemetry = "0.16.0"
fastrace-futures = "0.7.17"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["testing"] }
opentelemetry-otlp = { version = "0.31.0", features = ["tls", "tls-roots", "grpc-tonic"] }
opentelemetry-appender-log = "0.31.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
kube = "3.0.1"
k8s-openapi = { version = "0.27.1", features = ["latest"] }
twox-hash = "2.1.2"
murmur3 = "0.5.2"
aes = "0.8.4"
aes-gcm = "0.10.3"
cbc = { version = "0.1.2", features = ["std"] }
base64 = "0.22.1"
md-5 = "0.10.6"
crc32fast = "1.5.0"
sha1 = "0.10.6"
half = { version = "2.7.1", features = ["serde", "num-traits", "zerocopy"] }
iana-time-zone = "0.1.65"
chumsky = { version = "0.12.0", default-features = false, features = ["pratt"] }
num = "0.4.3"
hf-hub = { version = "0.4.3", default-features = false, features = ["tokio"] }
reqwest = { version = "0.12.27", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
percent-encoding = "2.3.2"
rustls = "0.23.37"
dashmap = "6.1.0"
itertools = "0.14.0"
moka = { version = "0.12.14", features = ["sync", "future"] }
bytes = "1.11.1"
indexmap = "2.13.0"
pin-project-lite = "0.2.17"
ordered-float = { version = "5.1.0", features = ["serde"] }
apache-avro = { version = "0.21.0" }
rust_decimal = "1.40.0"
wiremock = "0.6.5"
testcontainers = "0.26.2"
progenitor = "0.11.2"
progenitor-client = "0.11.2"
secrecy = { version = "0.10.3", features = ["serde"] }
tempfile = "3.26.0"
readonly = "0.2.13"
toml = "0.8"

######
# The versions of the following dependencies are managed manually.
######

# The `tonic` version must match the one used in `arrow-flight` (replace `RELEASE` with the release we are using):
#   https://github.com/apache/arrow-rs/blob/RELEASE/arrow-flight/Cargo.toml
tonic = { version = "0.14.5", features = ["tls-ring", "tls-native-roots", "gzip", "zstd"] }
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
tonic-prost = "0.14.5"
tonic-reflection = "0.14.5"
tonic-health = "0.14.5"
tonic-types = "0.14.5"
# The `prost` version must match the one used in `tonic` (replace `RELEASE` with the release we are using):
#   https://github.com/hyperium/tonic/blob/vRELEASE/tonic/Cargo.toml
prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
# The `axum` version must match the one used in `tonic` (replace `RELEASE` with the release we are using):
#   https://github.com/hyperium/tonic/blob/vRELEASE/tonic/Cargo.toml
axum = "0.8.8"
datafusion = { version = "53.0.0", features = ["serde", "avro", "sql"] }
datafusion-common = { version = "53.0.0", features = ["object_store", "avro"] }
datafusion-datasource = { version = "53.0.0" }
datafusion-expr = { version = "53.0.0" }
datafusion-expr-common = { version = "53.0.0" }
datafusion-proto = { version = "53.0.0" }
datafusion-functions = { version = "53.0.0" }
datafusion-functions-nested = { version = "53.0.0" }
datafusion-physical-expr = { version = "53.0.0" }
datafusion-session = { version = "53.0.0" }
datafusion-spark = { version = "53.0.0", features = ["core"] }
# The `pyo3` version must match the one used in `arrow-pyarrow` (replace `RELEASE` with the release we are using):
#   https://github.com/apache/arrow-rs/blob/RELEASE/arrow-pyarrow/Cargo.toml
pyo3 = { version = "0.28.0", features = ["serde"] }
# Jiter has a dependency on pyo3, which needs to match the version used in Sail.
# https://github.com/pydantic/jiter/blob/v0.13.0/Cargo.toml
jiter = { version = "0.13.0" }
arrow = { version = "58.0.0", features = ["chrono-tz"] }
arrow-buffer = { version = "58.0.0" }
arrow-schema = { version = "58.0.0", features = ["serde"] }
arrow-flight = { version = "58.0.0" }
arrow-pyarrow = { version = "58.0.0" }
parquet = { version = "58.0.0" }
serde_arrow = { version = "0.14.0", features = ["arrow-58"] }
# The `object_store` version must match the one used in DataFusion.
object_store = { version = "0.13.2", features = ["aws", "gcp", "azure", "http"] }
hdfs-native-object-store = "0.16.0"

######
# This is the end of the manually managed dependencies.
# Do not add more dependencies below.
######

[patch.crates-io]
# Override dependencies to use our forked versions.
# You can use `path = "..."` to temporarily point to your local copy of the crates to speed up local development.

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#release
opt-level = 3
debug = false
strip = true # Eliminate debug info to minimize binary size
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1

[profile.coverage]
inherits = "dev"
incremental = false
