[tool.poetry]
name = "framework-examples"
version = "0.0.1"
description = "LakeSail framework examples"
authors = ["LakeSail <hello@lakesail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
pyspark = { version = "3.5.1", extras = ["connect", "sql"] }

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.12.1"
flake8 = "^7.0.0"
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"
pytest-reportlog = "^0.4.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
