[tool.poetry]
name = "framework-examples"
version = "0.0.1"
description = "LakeSail framework examples"
authors = ["LakeSail <hello@lakesail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"

pyspark = { version = "3.5.1", extras = ["connect", "sql"] }

numpy = "^1.15"
scipy = "^1.14"
pandas = "2.0.3"
pyarrow = "12.0.1"
flask = "3.0.2"
matplotlib = "^3.9"
plotly = "^4.8"
scikit-learn = "^1.1"
mlflow = "^2.3.1"
memory-profiler = "0.60.0"

grpcio = ">=1.56,<1.57"
grpcio-status = ">=1.56,<1.57"
googleapis-common-protos = "1.56.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.12.1"
flake8 = "^7.0.0"
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"
pytest-reportlog = "^0.4.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
