[package]
name = "framework-python"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-array = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
pyo3 = { workspace = true }
arrow = { workspace = true }
sqlparser = { workspace = true }
polars = { workspace = true }
polars-arrow = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
